{
    "name": "DroneController",
    "maps": [
        {
            "name": "Drone",
            "id": "acdf0d51-ad7f-4a45-97b3-0443300a5ccc",
            "actions": [
                {
                    "name": "DroneTurn",
                    "type": "Value",
                    "id": "433cd52a-71d0-406c-ad5f-8c20c8b8aefc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DroneMove",
                    "type": "Value",
                    "id": "302db231-2a2c-454d-a095-7b1c5faa1dad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DroneDown",
                    "type": "Button",
                    "id": "518ca55d-3b62-47d3-9c54-e262d0dd4118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DroneUp",
                    "type": "Button",
                    "id": "433582c1-e45e-4750-aa29-083d2671d341",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stand",
                    "type": "Button",
                    "id": "56b372d1-350a-4ddb-8c26-f68568b94e30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "809d0315-d138-4a82-bc9d-37b5f8740d4d",
                    "path": "<XRController>{LeftHand}/Primary2DAxis",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Continuous Move",
                    "action": "DroneMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0374d137-34ab-4eae-9494-2e4a21a37a89",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "DroneDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3056ba7-de8e-4272-a3b4-7908e8856944",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "DroneUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d90632-6f1b-4c18-8f35-36c00e33fa1d",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e727102-9d91-4706-9a30-cf1c1e1f887a",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cfc0db9-57cf-40c0-8b84-2645ca0e9948",
                    "path": "<XRController>{RightHand}/Primary2DAxis",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "DroneTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2001275c-59a9-44e0-92f6-b45c311df32b",
                    "path": "<XRController>{RightHand}/Primary2DAxis",
                    "interactions": "Sector(directions=12,sweepBehavior=1),Sector(directions=2,sweepBehavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "DroneTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Drone1",
            "id": "004809fe-0e28-4922-9cd4-fb1a28c6c7ba",
            "actions": [
                {
                    "name": "Cyclic",
                    "type": "PassThrough",
                    "id": "b734995e-f38d-4c94-bc28-da002166e440",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pedals",
                    "type": "Value",
                    "id": "4a7664b3-8a0a-4980-966d-01a93706a516",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throttle",
                    "type": "Value",
                    "id": "48773d20-5937-4231-9e4f-9d5baac257e4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Stand",
                    "type": "Button",
                    "id": "f5c78169-a70c-48e8-bcfd-9147c3551f8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ecb9ea88-82e8-4f51-a9d3-749a4a525961",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cyclic",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3496a8d9-ef84-4548-9204-a0783e49a9f2",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cyclic",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "98751afd-1be6-4491-abf2-3ff5918f6fef",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cyclic",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "66b9f8cc-54a3-4bc5-b369-65887a68f572",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cyclic",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bfe099d7-7427-4ae2-ad82-d51372ac9cc3",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cyclic",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "84657199-a089-48d4-85c2-3fc7198c0beb",
                    "path": "<XRController>{LeftHand}/Primary2DAxis",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Joystick;XR",
                    "action": "Cyclic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "d4a4f12d-234c-4c3e-b64b-e063a5386608",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pedals",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7d8d200a-a174-43d7-91f2-4864eb78e8ea",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pedals",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "945abd72-9403-4cbc-ada2-3b6fef95beba",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pedals",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa3577f1-9638-45d7-8a33-2cc34456780f",
                    "path": "<XRController>{RightHand}/Primary2DAxis",
                    "interactions": "Sector(directions=12)",
                    "processors": "",
                    "groups": "Joystick;XR",
                    "action": "Pedals",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "57746217-90b3-4771-ab29-0aea1955369b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "76d20071-5aef-435d-9b88-d7e9f878701f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "83379d57-87fa-47b3-a0fd-ec3da937a95d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7f3a9525-3899-421d-a99d-c08870d1663e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c360eca4-e880-4755-a079-bb0a5dbfe396",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick;XR",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a399efe1-a4d3-467a-8838-6bb6c2bf7aa6",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick;XR",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f6075130-5870-4964-ba64-2f0d2f2624e8",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79159d41-ec8a-4e90-bb59-c7b074a9ae5b",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR;Joystick",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}